#
# Copyright (c) 2016      Mellanox Technologies, Inc.
#                         All rights reserved.
# Copyright (c) 2017      Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        src/sm/pmix_sm.h \
        src/sm/pmix_mmap.h

sources += \
        src/sm/pmix_sm.c \
        src/sm/pmix_mmap.c
