#
# Copyright (c) 2014-2017 Intel, Inc. All rights reserved.
# Copyright (c) 2014      Artem Y. Polyakov <artpol84@gmail.com>.
#                         All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        src/usock/usock.h

sources += \
        src/usock/usock.c \
        src/usock/usock_sendrecv.c
